--- a/definitions/centos-6.6-x86_64/ks.cfg
+++ b/definitions/centos-6.6-x86_64/ks.cfg
@@ -1,13 +1,13 @@
 install
 url --url=http://mirror.centos.org/centos/6.6/os/x86_64/
-lang de_DE.UTF-8
-keyboard de
-network --bootproto=dhcp
+lang en_US.UTF-8
+keyboard us
+network --onboot=yes --device=eth0 --bootproto=dhcp --noipv6
 rootpw --iscrypted $1$damlkd,f$UC/u5pUts5QiU3ow.CSso/
 firewall --enabled --service=ssh
 authconfig --enableshadow --passalgo=sha512
 selinux --disabled
-timezone Europe/Berlin
+timezone --utc America/New_York
 bootloader --location=mbr
 
 text
@@ -25,6 +25,10 @@ reboot
 @core
 openssh-clients
 openssh-server
+vsftpd
+ftp
+wget
+tree
 %end
 
 %post
